[gd_scene load_steps=3 format=3 uid="uid://crev2inf1u6xe"]

[ext_resource type="Script" uid="uid://b3xjr2sl801ru" path="res://main menu 2.gd" id="1_06t4h"]
[ext_resource type="PackedScene" uid="uid://sa8ec4kudve1" path="res://fade_transition.tscn" id="2_7vrkn"]

[node name="Main Menu" type="Node2D"]

[node name="bg" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 5.0
offset_right = 1186.0
offset_bottom = 598.0

[node name="Button_Manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 91.0
offset_bottom = 93.0

[node name="Start" type="Button" parent="Button_Manager"]
layout_mode = 0
offset_left = 462.0
offset_top = 120.0
offset_right = 715.0
offset_bottom = 191.0
text = "Start"
script = ExtResource("1_06t4h")

[node name="fade_timer" type="Timer" parent="Button_Manager/Start"]

[node name="fade_transition" parent="Button_Manager" instance=ExtResource("2_7vrkn")]
visible = false
layout_mode = 0
offset_left = -1609.0
offset_top = -516.0
offset_right = 3404.0
offset_bottom = 1368.0

[node name="Quit" type="Button" parent="Button_Manager"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
offset_left = 462.0
offset_top = 216.0
offset_right = 680.5
offset_bottom = 290.0
text = "Quit"
script = ExtResource("1_06t4h")

[connection signal="pressed" from="Button_Manager/Start" to="Button_Manager/Start" method="_on_start_pressed"]
[connection signal="timeout" from="Button_Manager/Start/fade_timer" to="." method="_on_fade_timer_timeout"]
[connection signal="pressed" from="Button_Manager/Quit" to="." method="_on_quit_pressed"]
